--- a/index-page/index.html
+++ b/index-page/index.html
@@ -175,8 +175,8 @@
         <img src="img/top-img/store2.jpg" alt="">
         <h4><span class="under">わいわい<span class="size">M</span>セット</span></h4>
         <p class="fz20 online-price">1980円(税込)</p>
-        <p class="online-txt">〜6人用</p>
-        <p class="online-txt">旬の野菜７〜８種</p>
+        <p class="online-txt">５〜6人用</p>
+        <p class="online-txt">旬の野菜7〜８種</p>
       </div>
       
             <div class="online-items-item">
