--- a/ramen-yama-code_20191224/index.html
+++ b/ramen-yama-code_20191224/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v5.0"></script>
+
 <!-- header -->
 <header class="header-top">
   <div class="header-lists">
@@ -128,6 +131,11 @@
     <img src="img/top/box03.png" alt="ラーメン山の内観" class="box03-img">
     <div class="top-fb">
       <p>facebook更新情報</p>
+      <div id="fb-container">
+        <div id="pageplugin">
+            <div class="fb-page" data-href="https://www.facebook.com/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3%E5%B1%B1-100916624735475/" data-tabs="timeline" data-width="500" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3%E5%B1%B1-100916624735475/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3%E5%B1%B1-100916624735475/">ラーメン山</a></blockquote></div>
+        </div>
+      </div>
     </div>
 </div>
 
