--- a/cord_20200205/index.html
+++ b/cord_20200205/index.html
@@ -213,7 +213,7 @@
     </div>
 
     <div class="intern-form">
-        <div class="inner">
+        <div class="inner inner-intern">
             <h2>始めるなら今！<br>就活の準備が整う<br class="br-sp">インターンシップ申込は<br class="br-sp br-sp-320">こちら</h2>
             <div class="iframe-wrap">
                 <iframe
