--- a/cord_20200205/index.html
+++ b/cord_20200205/index.html
@@ -161,7 +161,7 @@
 
                 <div class="flow-content">
                     <p class="flow-content-num"><span class="flow-content-num-txtl">3</span>rd STEP</p>
-                    <h3>人事体験インターンシップ</h3>
+                    <h3>人事体験<br class="br-sp">インターンシップ</h3>
                     <div class="flow-img-wrap-sp">
                         <img src="img/flow03.jpg" alt="" class="flow-img">
                     </div>
