--- a/cord_20200206/index.html
+++ b/cord_20200206/index.html
@@ -231,7 +231,7 @@
     <!-- [ スマホ用フッター] -->
     <div class="footer_area">
         <div class="footer_area_inner">
-            <a id="anchor" href=".intern-form">内定獲得に大きく近づく<br>インターンシップの申し込みは<br>コチラ！</a>
+            <a id="anchor" href=".intern-form">内定獲得に大きく近づく<br>インターンシップの申し込みはコチラ！</a>
         </div>
     </div>
 
