--- a/cord_20200206/index.html
+++ b/cord_20200206/index.html
@@ -75,8 +75,8 @@
     </div>
 
     <div class="message">
+        <h2 class="message-h2">メッセージ</h2>
         <div class="inner inner-message">
-            <h2 class="message-h2">メッセージ</h2>
             <p class="section-ttl-en">message</p>
             <div class="message-content">
                 <p>数年前まで就活生だった、就活生と社会人の両方の視点を持つ<br class="br-sp-no">入社1～3年目の社員があなたの就活を<span
@@ -231,7 +231,8 @@
     <!-- [ スマホ用フッター] -->
     <div class="footer_area">
         <div class="footer_area_inner">
-            <a id="anchor" href=".intern-form">内定獲得に大きく近づく<br>インターンシップの申し込みはコチラ！</a>
+            <a id="anchor" href=".intern-form"><span class="footer_area_red">内定獲得</span>に大きく近づく<br><span
+                    class="footer_area_inter">インターンシップの申し込みはコチラ！</span></a>
         </div>
     </div>
 
