--- a/cord_20200331/index.html
+++ b/cord_20200331/index.html
@@ -190,8 +190,8 @@
             <h2>参加者の声</h2>
             <div class="flow-1st-voice">
                 <p>
-                    若手社員の方々が、ご自身の就活をふまえてプログラムを作ってくださっているので、全てがリアルでとても為になった。また、ワークに対するフィードバックにより
-                    <span class="bold">学生の自分には思いつかなかった視点を得ることができ、新たな発見になりました。</span>(文系・男性)
+                    若手社員の方々が、ご自身の就活をふまえてプログラムを作ってくださっているので、全てがリアルでとても為になった。また、ワークに対するフィードバックにより<span
+                        class="bold">学生の自分には思いつかなかった視点を得ることができ、新たな発見になりました。</span>(文系・男性)
                 </p>
             </div>
             <div class="flow-1st-voice">
