--- a/cord_20200331/index.html
+++ b/cord_20200331/index.html
@@ -117,7 +117,8 @@
                     </div>
                     <p class="flow-content-point">“いつ”“なにを”“どうやって”＆自分の力試し！</p class="flow-content-txtl">
                     <p class="flow-content-txt">近年の就活状況や、当社が取り扱っている業界を例に業界研究の方法をお伝えします。<br class="br-tab-no">
-                        また、3つのワークを通して、今の自分のグループワーク力を試してみてください。社会人にとって必要なチームプレイのスキルを向上できるプログラムです。
+                        また、3つのワークを通して、今の自分のグループワーク力を試してみてください。<span
+                            class="undercl undercl-2">社会人にとって必要なチームプレイのスキル</span>を向上できるプログラムです。
                     </p>
                 </div>
 
@@ -234,7 +235,7 @@
     <div class="footer_area">
         <div class="footer_area_inner">
             <a id="anchor" href=".intern-form"><span class="footer_area_red">内定獲得</span>に大きく近づく<br><span
-                    class="footer_area_inter">インターンシップの申し込みはコチラ！</span></a>
+                    class="footer_area_inter">就活アカデミーの申し込みはコチラ！</span></a>
         </div>
     </div>
 
